mapfishapp - annotation addon translated to Spanish

--- a/src/main/webapp/app/addons/annotation/manifest.json
+++ b/src/main/webapp/app/addons/annotation/manifest.json
@@ -44,7 +44,39 @@
             "annotation.name": "Name",
             "annotation.no_title": "no title"
         },
-        "es": {},
+        "es": {
+            "annotation.drawing_tools": "Herramientas de dibujo",
+            "annotation.delete_feature": "Borrar el objeto",
+            "annotation.delete_confirm": "¿Confirma que quiere borrar este objeto?",
+            "annotation.delete": "Borrar",
+            "annotation.delete_all": "Borrar",
+            "annotation.modify": "Modificar",
+            "annotation.linestring": "Línea",
+            "annotation.multilinestring": "MultiLínea",
+            "annotation.point": "Punto",
+            "annotation.circle": "Círculo",
+            "annotation.box": "Rectángulo",
+            "annotation.multipoint": "MultiPunto",
+            "annotation.polygon": "Polígono",
+            "annotation.multipolygon": "MultiPolígono",
+            "annotation.label": "Etiqueta",
+            "annotation.create_point": "Crear un punto",
+            "annotation.create_circle": "Crear un círculo",
+            "annotation.create_box": "Crear un rectángulo",
+            "annotation.create_line": "Crear una línea",
+            "annotation.create_polygon": "Crear un polígono",
+            "annotation.create_label": "Crear una etiqueta",
+            "annotation.delete_all_features": "Borrar todos los objetos",
+            "annotation.delete_features_confirm": "¿Confirma que quiere borrar todos los objetos?",
+            "annotation.close": "Cerrar",
+            "annotation.style": "Estilo",
+            "annotation.size": "Tamaño",
+            "annotation.fontsize": "Tamaño",
+            "annotation.strokewidth": "Grosor",
+            "annotation.color": "Color",
+            "annotation.name": "Nombre",
+            "annotation.no_title": "Sin título"
+        },
         "fr": {
             "annotation.drawing_tools": "Outils de dessin",
             "annotation.delete_feature": "Supprimer l'objet",
