Adding support for KML export

--- a/src/main/webapp/app/addons/annotation/manifest.json
+++ b/src/main/webapp/app/addons/annotation/manifest.json
@@ -17,6 +17,8 @@
             "annotation.delete_confirm": "Do you really want to delete this feature ?",
             "annotation.delete": "Delete",
             "annotation.delete_all": "DeleteAll",
+            "annotation.export_as_kml": "Export",
+            "annotation.export_as_kml_tip": "Export as KML",
             "annotation.modify": "Modify",
             "annotation.linestring": "LineString",
             "annotation.multilinestring": "MultiLineString",
@@ -50,6 +52,8 @@
             "annotation.delete_confirm": "¿Confirma que quiere borrar este objeto?",
             "annotation.delete": "Borrar",
             "annotation.delete_all": "Borrar",
+            "annotation.export_as_kml": "Exportar",
+            "annotation.export_as_kml_tip": "Exportar a KML",
             "annotation.modify": "Modificar",
             "annotation.linestring": "Línea",
             "annotation.multilinestring": "MultiLínea",
@@ -83,6 +87,8 @@
             "annotation.delete_confirm": "Voulez-vous vraiment supprimer cet objet ?",
             "annotation.delete": "Supprimer",
             "annotation.delete_all": "Supprimer",
+            "annotation.export_as_kml": "Exporter",
+            "annotation.export_as_kml_tip": "Exporter en KML",
             "annotation.modify": "Modifier",
             "annotation.linestring": "Ligne",
             "annotation.multilinestring": "MultiLigne",
