--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,14 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-mock</artifactId>
-			<version>2.0.3</version>
+            <version>2.0.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
+           <version>3.2.4.RELEASE</version>
+<!-- 			<version>${spring.version}</version> -->
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
