enabling i18n ru in jsbuild

--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -79,3 +79,16 @@ include =
     GEOR_Lang/es.js
     Styler/lang/es.js
     locale/ext-lang-es.js
+
+[lang/ru.js]
+root =
+    ../src/main/webapp/lib/externals/openlayers/lib
+    ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/styler/lib
+    ../src/main/webapp/app/js
+#~ first =
+    #~ OpenLayers/Lang/es.js
+include =
+    GEOR_Lang/ru.js
+    #Styler/lang/ru.js
+    locale/ext-lang-ru.js
