mapfishapp - renamed resultspanel into ResultsPanel after #435

--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -30,7 +30,7 @@ first =
 include =
     GEOR_getfeatureinfo.js
     GEOR_selectfeature.js
-    GEOR_resultspanel.js
+    GEOR_ResultsPanel.js
     GEOR_querier.js
     GEOR_styler.js
     GEOR_wmc.js
