integrated the FeatureEditorGrid

--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -2,6 +2,7 @@
 root =
     ../src/main/webapp/lib/Ext.ux/lib
     ../src/main/webapp/lib/proj4js/lib
+    ../src/main/webapp/lib/geoext.ux/ux/FeatureEditing/lib/
     ../src/main/webapp/lib/externals/styler/lib
     ../src/main/webapp/lib/externals/openlayers/lib
     ../src/main/webapp/lib/addins/loadingPanel/trunk/lib
