--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -40,6 +40,7 @@ exclude =
 root =
     ../src/main/webapp/lib/externals/openlayers/lib
     ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/geoext/lib
     ../src/main/webapp/lib/externals/styler/lib
     ../src/main/webapp/app/js
 #~ first =
@@ -53,6 +54,7 @@ include =
 root =
     ../src/main/webapp/lib/externals/openlayers/lib
     ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/geoext/lib
     ../src/main/webapp/lib/externals/styler/lib
     ../src/main/webapp/app/js
 #~ first =
@@ -66,6 +68,7 @@ include =
 root =
     ../src/main/webapp/lib/externals/openlayers/lib
     ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/geoext/lib
     ../src/main/webapp/lib/externals/styler/lib
     ../src/main/webapp/app/js
 #~ first =
@@ -79,10 +82,11 @@ include =
 root =
     ../src/main/webapp/lib/externals/openlayers/lib
     ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/geoext/lib
     ../src/main/webapp/lib/externals/styler/lib
     ../src/main/webapp/app/js
 #~ first =
-    #~ OpenLayers/Lang/es.js
+    #~ OpenLayers/Lang/ru.js
 include =
     GEOR_Lang/ru.js
     #Styler/lang/ru.js
