openls addon: removed now useless dependency to geoext's popup

--- a/src/main/webapp/app/addons/openls/manifest.json
+++ b/src/main/webapp/app/addons/openls/manifest.json
@@ -1,11 +1,9 @@
 {
     "js": [
-        "js/main.js",
-        "../../../lib/externals/geoext/lib/GeoExt/widgets/Popup.js"
+        "js/main.js"
     ],
     "css": [
-        "css/main.css",
-        "../../../lib/externals/geoext/resources/css/popup.css"
+        "css/main.css"
     ],
     "default_options": {
         "GeocodedAddressFields": [
