--- a/pom.xml
+++ b/pom.xml
@@ -149,12 +149,23 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 			<type>jar</type>
-		</dependency>		<dependency>
+		</dependency>		
+        <dependency>
 			<groupId>log4j</groupId>
 			<artifactId>apache-log4j-extras</artifactId>
 			<version>1.1</version>
 			<type>jar</type>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
 		</dependency>
 	</dependencies>
 	<build>
