--- a/pom.xml
+++ b/pom.xml
@@ -104,9 +104,9 @@
 			<version>${gt.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.georchestra</groupId>
+			<groupId>org.geotools</groupId>
 			<artifactId>gt-mif</artifactId>
-			<version>${project.version}</version>
+			<version>${gt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.geotools</groupId>
