references to EPSG:2154 removed, closes #310

--- a/src/main/webapp/app/addons/extractor/manifest.json
+++ b/src/main/webapp/app/addons/extractor/manifest.json
@@ -9,7 +9,7 @@
         "serviceURL": "/extractorapp/extractor/initiate",
         "srsData": [
             ["EPSG:4326", "WGS84 (EPSG:4326)"],
-            ["EPSG:2154", "Lambert 93 (EPSG:2154)"]
+            ["EPSG:3857", "Spherical Mercator (EPSG:3857)"]
         ],
         "defaultSRS": "EPSG:4326",
         "vectorFormatData": [
