mapfishapp: german translation

--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -91,3 +91,17 @@ include =
     GEOR_Lang/ru.js
     #Styler/lang/ru.js
     locale/ext-lang-ru.js
+
+[lang/de.js]
+root =
+    ../src/main/webapp/lib/externals/openlayers/lib
+    ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/geoext/lib
+    ../src/main/webapp/lib/externals/styler/lib
+    ../src/main/webapp/app/js
+#~ first =
+    #~ OpenLayers/Lang/de.js
+include =
+    GEOR_Lang/de.js
+    #Styler/lang/de.js
+    locale/ext-lang-de.js
