--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -90,5 +90,5 @@ root =
     #~ OpenLayers/Lang/es.js
 include =
     GEOR_Lang/ru.js
-    #Styler/lang/ru.js
+    Styler/lang/ru.js
     locale/ext-lang-ru.js
