de-enabled styler

--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -103,5 +103,5 @@ root =
     #~ OpenLayers/Lang/de.js
 include =
     GEOR_Lang/de.js
-    #Styler/lang/de.js
+    Styler/lang/de.js
     locale/ext-lang-de.js
