adding geowebcache standalone module.
fix build so that each module can once again be build from that module directory.

--- a/pom.xml
+++ b/pom.xml
@@ -206,9 +206,10 @@
 				<artifactId>gmaven-plugin</artifactId>
 				<dependencies>
 					<dependency>
-							<groupId>org.georchestra</groupId>
-							<artifactId>config</artifactId>
-							<version>${project.version}</version>
+                        <groupId>org.georchestra</groupId>
+                        <artifactId>config</artifactId>
+                        <version>${project.version}</version>
+                        <classifier>${server}</classifier>
 					</dependency>
 				</dependencies>
 			</plugin>
