--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-mock</artifactId>
       <version>2.0.3</version>
@@ -227,9 +233,9 @@
         </configuration>
       </plugin>
       <plugin>
-        <!-- Copy of default.wmc.example if there is no default.wmc in
-             src/main/webapp. This file is not overwritten if the packaging
-             process has copied its own default.wmc file. -->
+        <!-- Copy of default.wmc.example if there is no default.wmc in src/main/webapp. 
+					This file is not overwritten if the packaging process has copied its own 
+					default.wmc file. -->
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
           <execution>
@@ -287,7 +293,8 @@
         <artifactId>tomcat-maven-plugin</artifactId>
         <version>1.0-beta-1</version>
         <configuration>
-          <!-- <server> and <url> must be specified on the "mvn tomcat:redeploy" command line.  -->
+          <!-- <server> and <url> must be specified on the "mvn tomcat:redeploy" 
+						command line. -->
           <path>/${project.build.finalName}</path>
         </configuration>
       </plugin>
@@ -393,7 +400,7 @@
         <artifactId>cobertura-maven-plugin</artifactId>
         <version>2.5.2</version>
         <configuration>
-          <check></check>
+          <check/>
           <formats>
             <format>html</format>
           </formats>
