--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-mock</artifactId>
+		<version>2.0.3</version>
+      	<scope>test</scope>	
+	</dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-mock</artifactId>
       <version>2.0.3</version>
