--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
       <groupId>org.geotools</groupId>
       <artifactId>gt-ogr-jni</artifactId>
       <version>${gt.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.gdal</groupId>
+          <artifactId>gdal</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.geotools.xsd</groupId>
