Update formt->format (de)

--- a/src/main/webapp/app/addons/extractor/manifest.json
+++ b/src/main/webapp/app/addons/extractor/manifest.json
@@ -63,8 +63,8 @@
             "The extraction request succeeded, check your email.": "erfolgreiche Extraktion. E-mail folgt.",
             "The extraction request failed.": "extraktion nicht erfolgt.",
             "SRS": "SRS",
-            "Format for vectors": "Formt des Layervectors",
-            "Format for rasters": "Formt des Layerrasters",
+            "Format for vectors": "Format des Layervectors",
+            "Format for rasters": "Format des Layerrasters",
             "Resolution for rasters (cm)": "Layer auflösung in cm",
             "Email": "Email Adresse",
             "This field should be an e-mail address in the format user@domain.com": "Formularfeld muss eine e-mailadresse beinhalten"
