--- a/src/main/webapp/app/addons/annotation/manifest.json
+++ b/src/main/webapp/app/addons/annotation/manifest.json
@@ -45,6 +45,8 @@
             "annotation.fontsize": "fontSize",
             "annotation.strokewidth": "strokeWidth",
             "annotation.color": "Color",
+            "annotation.fillcolor": "Fill color",
+            "annotation.outlinecolor": "Outline color",
             "annotation.name": "Name",
             "annotation.no_title": "no title"
         },
@@ -80,6 +82,8 @@
             "annotation.fontsize": "Tamaño",
             "annotation.strokewidth": "Grosor",
             "annotation.color": "Color",
+            "annotation.fillcolor": "Relleno",
+            "annotation.outlinecolor": "Contorno",
             "annotation.name": "Nombre",
             "annotation.no_title": "Sin título"
         },
@@ -115,6 +119,8 @@
             "annotation.fontsize": "Taille",
             "annotation.strokewidth": "Épaisseur",
             "annotation.color": "Couleur",
+            "annotation.fillcolor": "Remplissage",
+            "annotation.outlinecolor": "Contour",
             "annotation.name": "Nom",
             "annotation.no_title": "Sans titre"
         }
