annotation addon: adressing remaining translations

--- a/src/main/webapp/app/addons/annotation/manifest.json
+++ b/src/main/webapp/app/addons/annotation/manifest.json
@@ -18,7 +18,7 @@
             "annotation.delete_feature": "Delete feature",
             "annotation.delete_confirm": "Do you really want to delete this feature ?",
             "annotation.delete": "Delete",
-            "annotation.delete_all": "DeleteAll",
+            "annotation.delete_all": "Wipe",
             "annotation.export_as_kml": "Export",
             "annotation.export_as_kml_tip": "Export as KML",
             "annotation.modify": "Modify",
@@ -55,7 +55,7 @@
             "annotation.delete_feature": "Borrar el objeto",
             "annotation.delete_confirm": "¿Confirma que quiere borrar este objeto?",
             "annotation.delete": "Borrar",
-            "annotation.delete_all": "Borrar",
+            "annotation.delete_all": "Limpiar",
             "annotation.export_as_kml": "Exportar",
             "annotation.export_as_kml_tip": "Exportar a KML",
             "annotation.modify": "Modificar",
