button to recenter on the marker

--- a/src/main/webapp/app/addons/streetview/manifest.json
+++ b/src/main/webapp/app/addons/streetview/manifest.json
@@ -15,16 +15,19 @@
     "i18n": {
         "de": {
             "StreetView": "StreetView",
+            "Recenter on the marker": "Zentrieren auf den Marker",
             "Move the marker to update the view": "Bewegen Sie die Markierung, um die Ansicht zu aktualisieren",
             "Click on the map to get a glimpse of the surroundings": "Klicken Sie auf die Karte, um einen Eindruck der Umgebung zu bekommen"
         },
         "es": {
             "StreetView": "StreetView",
+            "Recenter on the marker": "Centrar nuevamente en el marcador",
             "Move the marker to update the view": "Mover el marcador para actualizar la vista",
             "Click on the map to get a glimpse of the surroundings": "Haga clic en el mapa para obtener una visión de los alrededores"
         },
         "fr": {
             "StreetView": "StreetView",
+            "Recenter on the marker": "Recentrer la carte sur le marqueur",
             "Move the marker to update the view": "Déplacez le marqueur pour mettre à jour la vue",
             "Click on the map to get a glimpse of the surroundings": "Cliquez sur la carte pour obtenir une vue de l'endroit"
         }
