mapfishapp: set user.home on docker command to avoid java prefs warnings
Add -Duser.home JVM argument to docker command to
avoid the following kind of warnings on the log
due to the JVM background job not being able to
periodically flush user preferences.

mapfishapp_1 | Aug 14, 2019 4:16:03 PM java.util.prefs.FileSystemPreferences syncWorld
mapfishapp_1 | WARNING: Couldn't flush user prefs: java.util.prefs.BackingStoreException: Couldn't get file lock

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -19,6 +19,7 @@ VOLUME [ "/mnt/mapfishapp_uploads", "/tmp", "/run/jetty" ]
 
 CMD ["sh", "-c", "exec java \
 -Djava.io.tmpdir=/tmp/jetty \
+-Duser.home=/mnt/mapfishapp_uploads \
 -Dgeorchestra.datadir=/etc/georchestra \
 -Dmapfish-print-config=/etc/georchestra/mapfishapp/print/config.yaml \
 -Dorg.geotools.referencing.forceXY=true \
