--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -4,8 +4,7 @@ ENV XMS=1G XMX=2G
 
 RUN java -jar "$JETTY_HOME/start.jar" --create-startd --add-to-start=jmx,jmx-remote,stats,http-forwarded
 
-ADD . /
-
+COPY --chown=jetty:jetty . /
 # Temporary switch to root
 USER root
 
