--- a/pom.xml
+++ b/pom.xml
@@ -288,7 +288,7 @@
     </plugins>
     <resources>
       <resource>
-        <directory>${basedir}/src/main/resources</directory>
+        <directory>${project.basedir}/src/main/resources</directory>
         <excludes>
           <exclude>**/*.example</exclude>
         </excludes>
@@ -413,7 +413,7 @@
                 <configuration>
                   <target>
                     <chmod perm="ugo+x">
-                      <fileset dir="${basedir}/target/deb">
+                      <fileset dir="${project.basedir}/target/deb">
                         <include name="**/bin/**"/>
                         <include name="**/sbin/**"/>
                         <include name="DEBIAN/post*"/>
